--- a/css/category.css
+++ b/css/category.css
@@ -4,6 +4,7 @@ html {
   transition: 200ms ease-in-out;
   margin: 0;
   padding: 0;
+  height: 100%;
   font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
   background-color: #f9f9f9;
   box-sizing: border-box;
@@ -17,7 +18,6 @@ html {
   font-size: 2.5rem;
   color: #226597;
 }
-
 /* Subtitle text */
 .subtitle {
   text-align: center;
@@ -40,9 +40,9 @@ html {
 }
 .card {
   background-color: #4e9fcf;
-  width: 19em; 
-  height: 350px; 
-  border-radius: 50px; 
+  width: 19em;
+  height: 350px;
+  border-radius: 50px;
   margin: 30px;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.6);
   transition: transform 0.7s ease;
