--- a/css/dentist-doc1.css
+++ b/css/dentist-doc1.css
@@ -25,7 +25,7 @@ html {
 
 .blue-background {
     background-color: #226597;
-    width: 80%;
+    width: 90%;
     min-height: 100vh;
     margin: 50px 0;
     box-shadow: 0 3px 20px rgba(1 1 1 / 75%);
@@ -134,7 +134,7 @@ html {
 
 .doc-card {
     background-color: #F3F9FB;
-    width: 19em;
+    width: 21.25em;
     margin: 30px 25px 20px;
     margin-right: 25px;
     padding: 10px;
@@ -308,6 +308,7 @@ body:has(.switch input:checked) .comment {
 /* FORM */
 .form-bg {
     visibility: hidden;
+    opacity: 0;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -319,6 +320,12 @@ body:has(.switch input:checked) .comment {
     z-index: 999;
     display: flex;
     justify-content: center;
+    transition: .3s ease;
+}
+
+.form-bg.visible {
+    visibility: visible;
+    opacity: 1;
 }
 
 .book-form input {
@@ -370,16 +377,17 @@ body:has(.switch input:checked) .comment {
 
 .cancel-btn:hover {
     transform: scale(1.05);
-    transition: .5s ease;
+    transition: .3s ease;
 }
 
 .book-confirm-btn:hover {
     transform: scale(1.1);
-    transition: .5s ease;
+    transition: .3s ease;
 }
 
 .book-msg {
     visibility: hidden;
+    opacity: 0;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -396,6 +404,11 @@ body:has(.switch input:checked) .comment {
     flex-direction: column;
 }
 
+.book-msg.visible {
+    visibility: visible;
+    opacity: 1;
+}
+
 .book-msg button {
     padding: 10px;
     margin: 10px 100px 0;
@@ -405,9 +418,10 @@ body:has(.switch input:checked) .comment {
     color: #F3F9FB;
     border: none;
     border-radius: 10px;
+    transition: .3s ease;
 }
 
 .book-msg button:hover {
     transform: scale(1.1);
-    transition: .5s ease;
+    transition: .3s ease;
 }
