--- a/css/Registration.css
+++ b/css/Registration.css
@@ -2,6 +2,7 @@ body {
     transition: background-color 0.5s ease;
     background-color: #e6f3fc;
     color: #000;
+    height: 100vh;
   }
   
   .container {
@@ -95,7 +96,7 @@ body {
   /* ======================== DARK MODE ======================== */
   
   body:has(.switch input:checked) {
-    background-color: #1e1e1e;
+    background: linear-gradient(to bottom, #0f172a, #1e1e1e);
     color: white;
   }
   
@@ -170,7 +171,6 @@ body {
     background-color: #45a049;
   }
   
-  /* Dark mode popups */
   body:has(.switch input:checked) .popup-content,
   body:has(.switch input:checked) .passwords-content {
     background-color: #2c2c2c;
