--- a/css/contact.css
+++ b/css/contact.css
@@ -95,6 +95,10 @@ textarea {
     cursor: pointer;
 }
 
+.contact-send-button:hover {
+    background-color: #0080FF;
+}
+
 .down-part {
     display: flex;
     width: 1000px;
@@ -220,33 +224,33 @@ body:has(.switch input:checked) .social-icons a:hover {
 /* footer css */
 .footer {
     height: 6%;
-    background-color: #4e9fcf;   
+    background-color: #4e9fcf;
     color: white;
     text-align: center;
     padding: 5px 0;
     width: 100%;
     position: sticky;
     bottom: 0;
-    left: 0; 
+    left: 0;
     min-height: 30px;
-    font-size: 12px; 
+    font-size: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-  
-  .social-icons {
+}
+
+.social-icons {
     display: flex;
     gap: 10px;
-  }
-  
-  .social-icons a {
+}
+
+.social-icons a {
     color: white;
     font-size: larger;
     transition: 0.3s;
-  }
-  
-  .social-icons a:hover {
+}
+
+.social-icons a:hover {
     color: #2c3e50;
-  }
+}
