--- a/css/cardiology.css
+++ b/css/cardiology.css
@@ -9,12 +9,14 @@
     align-items: center;
     justify-content: center;
     gap: 10px; 
-    margin-bottom: 20px;
+  
   }
   
   .welcome-title h1 {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
+    margin-top: 10px;
     color: #226597;
+    font-weight: 800;
   }
   
   .heart-icon {
@@ -25,13 +27,13 @@
   .main-title p {
     text-align: center;
     margin-top: 10px;
-    margin-bottom: 40px;
-    font-size: 1.2rem;
+    margin-bottom: 30px;
+    font-size: 1.1rem;
     color: rgba(0, 0, 0, 0.6); /* Light/faded color */
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
-    line-height: 1.2;
+    line-height: 1.5;
   }
 .container{
   display: flex;
@@ -41,12 +43,16 @@
 }
 .card {
   background-color:#4e9fcf;
-  width: 18.1em;
+  width: 19em;
+  height: 350px;
   border-radius: 50px;
-  padding: 20px;
+  /*padding: 20px;*/
   margin: 20px;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.6);
   transition: 0.7s ease;
+}
+.card:hover {
+  transform: translateY(-5px);
 }
 
 /*.doc-icon {
@@ -92,41 +98,36 @@ transform: scale(1.1);
   font-weight: bold;
 }
 body:has(.switch input:checked) {
-  transition: .3s ease;
- /* background-color: #09122C;*/
+  transition: 200ms ease-in-out;
  background-color: #0a2647;
 }
 body:has(.switch input:checked) .welcome-title h1 {
-  transition: .3s ease;
-  color: #fff;
+  color: #e0eaf0;
 
 }
 body:has(.switch input:checked) .heart-icon {
-  transition: .3s ease;
-  color: #fff;
+  color: #e0eaf0;
 }
 body:has(.switch input:checked) .main-title p {
-  transition: .3s ease;
-  color: #fff;
+  color: #e0eaf0;
 }
 body:has(.switch input:checked) .card {
-  transition: .3s ease;
   background-color: #123458;
+  box-shadow: 0 4px 12px rgb(0, 0, 0);
 }
 body:has(.switch input:checked) .doctor-info a{
-  transition: .3s ease;
   text-shadow: 1px 1px 5px#09122C;
 }
 .image-wrapper {
   display: flex;
   justify-content: center;
-  margin-top: -60px;
+  margin-top: -50px;
   margin-bottom: 10px;
 }
 
 .doctor-image {
-  width: 180px;
-  height: 180px;
+  width: 155px;
+  height: 155px;
   border-radius: 50%;
   object-fit: cover;
   border: 4px solid #123458;
