--- a/css/category.css
+++ b/css/category.css
@@ -7,7 +7,7 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: "Roboto", sans-serif;
+  /*font-family: "Roboto", sans-serif;*/
   font-optical-sizing: auto;
   font-weight: 350;
   font-style: normal;
@@ -279,4 +279,8 @@ body:has(.switch input:checked) .search {
 body:has(.switch input:checked) .search ::-webkit-input-placeholder,
 body:has(.switch input:checked) .search-icon {
   color: #e0eaf0;
+}
+body:has(.switch input:checked) .doctor-info a{
+  transition: .3s ease;
+  text-shadow: 1px 1px 5px#09122C;
 }
