--- a/css/chat-bot.css
+++ b/css/chat-bot.css
@@ -3,7 +3,7 @@
     position: fixed;
     bottom: 20px;
     left: 20px;
-    background-color: #007bff;
+    background-color: #4e9fcf;
     color: white;
     border: none;
     border-radius: 30px;
@@ -17,7 +17,7 @@
   }
   
   .chatbot-btn:hover {
-    background-color: #0056b3;
+    background-color: #4e9fcf;
     transform: scale(1.05);
   }
   
@@ -56,7 +56,7 @@
   }
   
   .chatbox-header {
-    background-color: #007bff;
+    background-color: #4e9fcf;
     color: white;
     padding: 10px;
     text-align: center;
@@ -82,7 +82,7 @@
   }
   
   .chatbox-input button {
-    background: #007bff;
+    background-color: #4e9fcf;
     color: white;
     border: none;
     padding: 0 15px;
