--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,7 @@ body {
 }
 
 .header {
-    background: linear-gradient(90deg, #4e9fcf, #4e9fcf);
+    background-color: #4e9fcf;
     height: 70px;
     position: sticky;
     top: 0;
@@ -65,13 +65,13 @@ body {
 
 .log-in {
     margin-right: 20px;
-    background-color: #4e9fcf;
+    background-color: #ffffff;
+    color:#4e9fcf;
     padding: 10px 20px;
     transition: 0.3s ease;
 }
 
 .log-in:hover {
-    background-color: rgba(255, 255, 255, 0.2);
     transform: scale(1.1);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
