--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -44,9 +44,9 @@
   }
   .search-results {
     display: flex;
-    justify-content: center;  /* توسيط أفقي */
+    justify-content: center;  
     align-items: center;
-    flex-wrap: wrap;          /* ينزلوا تحت بعض لو الشاشة ضيقة */
+    flex-wrap: wrap;          
     gap: 20px;
     margin-top: 20px;
   }
@@ -65,5 +65,9 @@
     background-color: #2c80b4;
   }
   body:has(.switch input:checked) .search-results a{
-    background-color: #16375c;
+    background-color: #264568;
+     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
+  }
+    body:has(.switch input:checked) .search-input{
+     color: #e0eaf0;
   }
