--- a/css/Registration.css
+++ b/css/Registration.css
@@ -1,8 +1,13 @@
+html{
+  height: 100%;
+}
+
 body {
     transition: background-color 0.5s ease;
     background-color: #e6f3fc;
     color: #000;
-    height: 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
   
   .container {
@@ -96,7 +101,7 @@ body {
   /* ======================== DARK MODE ======================== */
   
   body:has(.switch input:checked) {
-    background: linear-gradient(to bottom, #0f172a, #1e1e1e);
+    background-image: linear-gradient( #0f172a, #1e1e1e);
     color: white;
   }
   
