--- a/css/Registration.css
+++ b/css/Registration.css
@@ -8,6 +8,7 @@ body {
     color: #000;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    font-family: "Roboto", sans-serif;
   }
   
   .container {
