--- a/css/Registration.css
+++ b/css/Registration.css
@@ -4,7 +4,7 @@ html{
 
 body {
     transition: background-color 0.5s ease;
-    background-color: #e6f3fc;
+    background-color: #ffffff;
     color: #000;
     background-repeat: no-repeat;
     background-attachment: fixed;
