--- a/css/bodyFooter.css
+++ b/css/bodyFooter.css
@@ -6,10 +6,10 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto' , sans-serif;
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     background-color: #ffffff;
     color: #222;
