removed the comments part 2

--- a/css/cardiology.css
+++ b/css/cardiology.css
@@ -31,7 +31,7 @@
     margin-top: 10px;
     margin-bottom: 30px;
     font-size: 1.1rem;
-    color: rgba(0, 0, 0, 0.6); /* Light/faded color */
+    color: rgba(0, 0, 0, 0.6);
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
@@ -48,7 +48,6 @@
   width: 19em;
   height: 350px;
   border-radius: 50px;
-  /*padding: 20px;*/
   margin: 20px;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.6);
   transition: 0.7s ease;
@@ -57,11 +56,7 @@
   transform: translateY(-5px);
 }
 
-/*.doc-icon {
-  color: #fff;
-  font-size: 11em;
-  text-align: center;
-}*/
+
 .doctor-info {
   text-align: center;
 }
